# zsp2-rust

./: .gitignore  .project  Cargo.toml  readme.md  z.zhscript  z.zs
demo/lose/: conf.zs
demo/lose/root/: index.zsp
demo/movbrow/: conf.zs
demo/movbrow/root/: 1.css  1.js  can-next.zs  captu.zs  captu.zsp  ctl.zsp  env.zs  get.zsp  index.zsp  item.zs  play.zsp  play2.zs  play2.zsp  play3.zsp  play4.zs  play4.zsp  show.zsp  sou.zs  sou.zsp  test.zsp
demo/shuyang/: conf.zs
demo/shuyang/root/: index.zsp
env/: r-ver.zhscript
src/: clpars4_.rs  cmp_.rs  file_.rs  main.rs  other_.rs  prgm_.rs  req_.rs  t_.rs
