[package]
name = "zsp2"
version = "4.4.1"
authors = ["zzzzzzzzzzz <zzzzzzzzzzzgg@gmail.com>"]
edition = "2018"

[dependencies]
zhscript2 = {version = "4.4.1", path = "../zhscript2-rust", features = ["thread"]}
zs2_l4_ = {version = "4.4.1", path = "../zs2-l4-rust"}
zhscript2_util = {version = "0.1.0", path = "../zhscript2-rust-lib/util"}
actix-web = "4.2.1"
actix-rt = "2.7.0"
actix-files = "0.6.2"
lazy_static = "1.4.0"
url = "2.1.1"
regex = "1.3.4"
rand = "0.7.3"

[profile.release]
strip = true
